--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/luisfidelis/poopin-api#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "hapi": "^16.4.3",
     "hapi-mongodb": "^6.2.1"
   }
