--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "async": "^2.5.0",
     "bcrypt": "^1.0.2",
     "hapi": "^16.4.3",
+    "hapi-auth-jwt": "^4.0.0",
     "hapi-mongodb": "^6.2.1",
     "hapi-router": "^3.5.0",
+    "jsonwebtoken": "^7.4.3",
     "moment": "^2.18.1",
     "mongoose": "^4.11.6",
     "mongoose-schema-formatdate": "^1.0.0",
