--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "async": "^2.5.0",
     "bcrypt": "^1.0.2",
+    "bluebird": "^3.5.0",
     "hapi": "^16.4.3",
     "hapi-auth-jwt": "^4.0.0",
     "hapi-mongodb": "^6.2.1",
